@@ -264,6 +264,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjets:
 
+       Canon PIXMA iP7200 (EXPERIMENTAL)
        Canon PIXMA MG2200 (EXPERIMENTAL)
        Canon PIXMA MG3200 (EXPERIMENTAL)
        Canon PIXMA MG4200 (EXPERIMENTAL)
